--- a/DMS_Solution/QueueRegistrationApp/App.xaml
+++ b/DMS_Solution/QueueRegistrationApp/App.xaml
@@ -2,8 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:QueueRegistrationApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Views/AppMainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
