Started to work on Queue display part of the application

--- a/DMS_Solution/QueueRegistrationApp/Views/AppMainWindow.xaml
+++ b/DMS_Solution/QueueRegistrationApp/Views/AppMainWindow.xaml
@@ -6,7 +6,7 @@
              prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <ContentControl>
-            <local:SelectQueueComponent></local:SelectQueueComponent>
+            <local:WelcomeComponent></local:WelcomeComponent>
         </ContentControl>
     </StackPanel>
 </Window>
