--- a/DMS_Solution/StaffClientApplication/Views/LoginUC.xaml
+++ b/DMS_Solution/StaffClientApplication/Views/LoginUC.xaml
@@ -3,7 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
-    <Grid>
-            
+    <UserControl.Resources>
+        <Style x:Key="textStyle" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontFamily" Value="Ariel"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Margin" Value="7,3"/>
+        </Style>
+        <Style x:Key="textBox" TargetType="TextBox">
+            <Setter Property="FontFamily" Value="Ariel"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="Margin" Value="7,3"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="MinWidth" Value="100"/>
+        </Style>
+    </UserControl.Resources>
+    <Grid Margin="10,5">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35*"/>
+            <RowDefinition Height="35*"/>
+            <RowDefinition Height="30*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="30*"/>
+            <ColumnDefinition Width="70*"/>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock Style="{StaticResource textStyle}" Text="Enter Username" Grid.Row="0" Grid.Column="0"/>
+        <TextBox Style="{StaticResource textBox}" Grid.Row="0" Grid.Column="1"/>
+
+        <TextBlock Style="{StaticResource textStyle}" Text="Enter Password" Grid.Row="1" Grid.Column="0"/>
+        <TextBox Style="{StaticResource textBox}" Grid.Row="1" Grid.Column="1" />
+
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Content="Sign-in" Margin="3,7" Padding="3"/>
     </Grid>
 </UserControl>
