Changed the model for the staff client

--- a/DMS_Solution/StaffClientApplication/Views/LoginUC.xaml
+++ b/DMS_Solution/StaffClientApplication/Views/LoginUC.xaml
@@ -31,10 +31,10 @@
         </Grid.ColumnDefinitions>
 
         <TextBlock Style="{StaticResource textStyle}" Text="Enter Username" Grid.Row="0" Grid.Column="0"/>
-        <TextBox Style="{StaticResource textBox}" Grid.Row="0" Grid.Column="1"/>
+        <TextBox Style="{StaticResource textBox}" Grid.Row="0" Grid.Column="1" Text="{Binding Path=Model.UserName}"/>
 
         <TextBlock Style="{StaticResource textStyle}" Text="Enter Password" Grid.Row="1" Grid.Column="0"/>
-        <TextBox Style="{StaticResource textBox}" Grid.Row="1" Grid.Column="1" />
+        <PasswordBox FontSize="18" FontFamily="Ariel" Grid.Row="1" Grid.Column="1" Margin="7,3" Padding="5"/>
 
         <Button Grid.Row="2" Grid.ColumnSpan="2" Content="Sign-in" Margin="3,7" Padding="3"/>
     </Grid>
