--- a/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
@@ -15,8 +15,8 @@
 
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,15" Padding="5" Text="Select the service you wish to receive"
                    FontSize="30" FontFamily="Ariel"/>
-        <Button Grid.Row="1" Grid.Column="0" FontSize="20" Padding="10,15" Content="Pharmacy" Margin="10,15" Command="{Binding EnterNurseQueueCommand}"/>
-        <Button Grid.Row="1" Grid.Column="1" FontSize="20" Padding="10,15" Content="Nurse treatment" Margin="10,15" Command="{Binding EnterPharmacyQueueCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" FontSize="20" Padding="10,15" Content="Pharmacy" Margin="10,15" Command="{Binding EnterPharmacyQueueCommand}"/>
+        <Button Grid.Row="1" Grid.Column="1" FontSize="20" Padding="10,15" Content="Nurse treatment" Margin="10,15" Command="{Binding EnterNurseQueueCommand}"/>
 
 
     </Grid>
