--- a/DMS_Solution/QueueRegisteringClient/Views/QueueDetailsDisplay.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/QueueDetailsDisplay.xaml
@@ -12,7 +12,7 @@
             <Setter Property="Margin" Value="10,15"/>
         </Style>
     </Window.Resources>
-    <StackPanel VerticalAlignment="Center">
+    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <StackPanel Orientation="Horizontal" Margin="10,15">
             <TextBlock Style="{StaticResource textStyle}" Text="Number in line: "/>
             <TextBlock Style="{StaticResource textStyle}" Text="{Binding Model.LineNumber.UserNumber}"/>
