--- a/DMS_Solution/QueueRegisteringClient/Views/AppMainWindow.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/AppMainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="QueueRegisteringClient.Views.AppMainWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" WindowState="Maximized"
+             xmlns:prism="http://prismlibrary.com/" Title="Queue Selection Application"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
         <ContentControl Content="{Binding CurrentView}"/>
