--- a/DMS_Solution/QueueRegisteringClient/Views/QueueDetailsDisplay.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/QueueDetailsDisplay.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="QueueRegisteringClient.Views.QueueDetailsDisplay"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:prism="http://prismlibrary.com/"             
+             xmlns:prism="http://prismlibrary.com/" WindowStartupLocation="CenterOwner"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Window.Resources>
         <Style x:Key="textStyle" TargetType="TextBlock">
