--- a/DMS_Solution/StaffStationClient/Views/LoginUC.xaml
+++ b/DMS_Solution/StaffStationClient/Views/LoginUC.xaml
@@ -37,6 +37,6 @@
         <TextBlock Style="{StaticResource textStyle}" Text="Enter Password" Grid.Row="1" Grid.Column="0"/>
         <TextBox Style="{StaticResource textBox}" Grid.Row="1" Grid.Column="1" Text="{Binding Path=Model.Password}"/>
 
-        <Button Grid.Row="2" Grid.ColumnSpan="2" Content="Sign-in" Margin="3,7" Padding="3"/>
+        <Button Grid.Row="2" Grid.ColumnSpan="2" Content="Sign-in" Margin="3,7" Padding="3" Command="{Binding LoginCommand}"/>
     </Grid>
 </UserControl>
