--- a/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
@@ -9,7 +9,8 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.45*"/>
+            <RowDefinition Height="0.40*"/>
+            <RowDefinition Height="0.30*"/>
             <RowDefinition Height="0.30*"/>
         </Grid.RowDefinitions>
 
@@ -17,7 +18,6 @@
                    FontSize="30" FontFamily="Ariel"/>
         <Button Grid.Row="1" Grid.Column="0" FontSize="20" Padding="10,15" Content="Pharmacy" Margin="10,15" Command="{Binding EnterPharmacyQueueCommand}"/>
         <Button Grid.Row="1" Grid.Column="1" FontSize="20" Padding="10,15" Content="Nurse treatment" Margin="10,15" Command="{Binding EnterNurseQueueCommand}"/>
-
-
+        <Button Grid.ColumnSpan="2" Grid.Row="2" FontSize="20" Padding="10,15" HorizontalAlignment="Center" Content="Cancel" Margin="10,15" Command="{Binding GoBackCommand}"/>
     </Grid>
 </UserControl>
