--- a/DMS_Solution/QueueDisplayTvClient/Views/MainWindow.xaml
+++ b/DMS_Solution/QueueDisplayTvClient/Views/MainWindow.xaml
@@ -6,5 +6,44 @@
         Title="{Binding Title}" Height="350" Width="525">
     <Grid>
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
+        
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.4*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="0.4*"/>
+            </Grid.RowDefinitions>
+
+            <TextBox Text="{Binding serviceType}"/>
+
+            <ListView Grid.Row="1" Background="AliceBlue" ItemsSource="{Binding Items}" >
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            
+                            <Border Background="Black" BorderThickness="5">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBox Grid.Row="0" Text="{Binding StationNumber}"/>
+                                    <TextBox Grid.Row="1" Text="{Binding PatientNumber}"/>
+
+                                </Grid>
+                            </Border>
+                            
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+        
     </Grid>
 </Window>
