--- a/DMS_Solution/StaffStationClient/Views/AppMainWindow.xaml
+++ b/DMS_Solution/StaffStationClient/Views/AppMainWindow.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/" Title="Staff Client" SizeToContent="WidthAndHeight"  
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True" Closing="Window_Closing">
     <StackPanel Margin="15,10">
         <ContentControl Content="{Binding CurrentView}"/>
     </StackPanel>
