--- a/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/SelectQueueComponent.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True" Background="AliceBlue" BorderBrush="Black" BorderThickness="2">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -16,7 +16,7 @@
 
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,15" Padding="5" Text="Select the service you wish to receive"
                    FontSize="30" FontFamily="Ariel"/>
-        <Button Grid.Row="1" Grid.Column="0" FontSize="20" Padding="10,15" Content="Pharmacy" Margin="10,15" Command="{Binding EnterPharmacyQueueCommand}"/>
+        <Button Grid.Row="1" Grid.Column="0" FontSize="20" Padding="20,15" Content="Pharmacy" Margin="10,15" Command="{Binding EnterPharmacyQueueCommand}"/>
         <Button Grid.Row="1" Grid.Column="1" FontSize="20" Padding="10,15" Content="Nurse treatment" Margin="10,15" Command="{Binding EnterNurseQueueCommand}"/>
         <Button Grid.Column="0" Grid.Row="2" FontSize="20" Padding="10,15" Content="Cancel" Margin="10,15" Command="{Binding GoBackCommand}"/>
     </Grid>
