--- a/DMS_Solution/QueueRegisteringClient/Views/WelcomeComponent.xaml
+++ b/DMS_Solution/QueueRegisteringClient/Views/WelcomeComponent.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/" Padding="25"
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True" Background="AliceBlue" BorderBrush="Black" BorderThickness="2">
     <StackPanel>
         <TextBlock Text="{Binding Message}" TextWrapping="Wrap" FontSize="40" Padding="15" Margin="10,15"/>
         <StackPanel Orientation="Horizontal" Margin="7,3">
